# metaltile

./: ACKNOWLEDGEMENTS.md  BENCH_REFACTOR_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KERNEL_AUDIT.md  Makefile  README.md  kernel_coverage.md  libnull.rlib  tile.toml
crates/metaltile/: Cargo.toml  README.md
crates/metaltile-autotune/: Cargo.toml
crates/metaltile-autotune/src/: budget.rs  cost.rs  engine.rs  export.rs  lib.rs  measurer.rs  search.rs  util.rs
crates/metaltile-cli/: Cargo.toml  README.md  build.rs
crates/metaltile-cli/src/: diff.rs  error.rs  git.rs  kernel_utils.rs  main.rs  measure.rs  run_spec.rs  runner.rs  runner_main.rs  stats.rs  suite_printer.rs  term.rs
crates/metaltile-cli/src/bench/: mod.rs  printer.rs  profile.rs  report.rs  runner.rs
crates/metaltile-cli/src/cmd/: autotune.rs  bench.rs  build.rs  clean.rs  completions.rs  config.rs  device.rs  diff.rs  emit.rs  infer.rs  init.rs  inspect.rs  mod.rs  profile.rs  snap.rs  test.rs  update.rs
crates/metaltile-cli/src/project/: compile.rs  config.rs  harness.rs  mod.rs
crates/metaltile-infer/: Cargo.toml
crates/metaltile-infer/src/: checkpoint.rs  config.rs  error.rs  hub.rs  lib.rs  session.rs
crates/metaltile-macros/: Cargo.toml  README.md
crates/metaltile-macros/src/: bench.rs  bench_impl.rs  body_parser.rs  derive_op.rs  lib.rs  sig_parser.rs  test.rs
crates/metaltile-macros/src/kernel/: body.rs  mod.rs
crates/metaltile-macros/src/legacy/: mod.rs
crates/metaltile-model/: Cargo.toml
crates/metaltile-model/src/: compiler.rs  error.rs  executor.rs  expr.rs  fuse_group.rs  lib.rs  liveness.rs  plan.rs  registry.rs  schema.rs
crates/metaltile-std/: CONVENTIONS.md  Cargo.toml  README.md  build.rs  strip_kernel_blanks.py
crates/metaltile-std/examples/: counter_probe.rs  pso_reflection_probe.rs
crates/metaltile-std/src/: bench_types.rs  error.rs  kernel_utils.rs  lib.rs  measure.rs  run_kernel.rs  run_spec.rs  runner.rs  runner_main.rs  spec.rs  stats.rs  utils.rs
crates/metaltile-std/src/benches/: mod.rs
crates/metaltile-std/src/ffai/: DSV4_FORWARD_ARC.md  arg_reduce.rs  attn_head_gate.rs  audio_conv1d.rs  aura_dequant_rotated.rs  aura_encode.rs  aura_flash_p1.rs  aura_flash_pass2.rs  aura_flash_sdpa.rs  aura_score.rs  aura_value.rs  batched_4_qgemv.rs  batched_4_qmm.rs  batched_qkv_qgemv.rs  batched_qkv_qmm.rs  conv1d_causal_step_silu_cast_many.rs  conv2d.rs  conv2d_mma.rs  conv3d.rs  conv3d_mma.rs  dequant_gather.rs  dequant_gemv.rs  dequant_gemv_expert_indexed.rs  dsv4_compressor_pool.rs  dsv4_csa_sdpa_decode.rs  dsv4_indexer_score.rs  dsv4_mhc.rs  fishspeech_conv1d.rs  flash_quantized_sdpa.rs  fused_gate_activation.rs  gated_delta.rs  gated_delta_prep.rs  gated_delta_prep_chunk.rs  gated_delta_replay.rs  gated_delta_wy.rs  gated_rms_norm_qgemv.rs  gated_rmsnorm.rs  gather.rs  gemm.rs  gemv_bm4.rs  (+46 more)
crates/metaltile-std/src/mlx/: arange.rs  arg_reduce.rs  binary.rs  binary_two.rs  clamped_swiglu.rs  conv.rs  copy.rs  fence.rs  fft.rs  fp_quantized.rs  fp_quantized_mma.rs  fp_quantized_nax.rs  fused_gate_activation.rs  gather_axis.rs  gemv.rs  gemv_masked.rs  hadamard.rs  hadamard_m.rs  indexing.rs  layer_norm.rs  logsumexp.rs  mod.rs  quantized.rs  quantized_mma_dynamic_m.rs  quantized_mpp.rs  quantized_mpp_int8.rs  quantized_nax.rs  quantized_nax_int8.rs  random.rs  reduce.rs  rms_norm.rs  rope.rs  scaled_dot_product_attention.rs  scan.rs  scatter_axis.rs  sdpa_vector.rs  sgload_smoke.rs  shared.rs  softmax.rs  sort.rs  (+4 more)
crates/metaltile-std/src/ops/: mod.rs
crates/metaltile-std/src/probe/: mma_layout_probe.rs  mod.rs  mpp_matmul_smoke.rs
crates/metaltile-std/tests/: affine_int2_gpu_correctness.rs  affine_int356_quantize_gpu_correctness.rs  arange_gpu_correctness.rs  arg_reduce_gpu_correctness.rs  argmax_gpu_correctness.rs  audio_conv1d_gpu_correctness.rs  aura_dequant_rotated_gpu_correctness.rs  aura_encode_gpu_correctness.rs  aura_flash_gpu_correctness.rs  aura_flash_p1_causal_gpu_correctness.rs  aura_flash_sdpa_gpu_correctness.rs  aura_msl_snapshots.rs  aura_score_gpu_correctness.rs  aura_value_gpu_correctness.rs  batched_qkv_qgemv_gpu_correctness.rs  binary_gpu_correctness.rs  binary_two_gpu_correctness.rs  cast_to_f32_gpu_correctness.rs  conv1d_causal_step_gpu_correctness.rs  conv1d_causal_step_silu_cast_many_gpu_correctness.rs  conv2d_gpu_correctness.rs  conv2d_mma_gpu_correctness.rs  conv3d_gpu_correctness.rs  conv3d_mma_gpu_correctness.rs  copy_gpu_correctness.rs  dequant_gather_gpu_correctness.rs  dequant_gemv_gpu_correctness.rs  fft_bluestein_gpu_correctness.rs  fft_gpu_correctness.rs  flash_quantized_sdpa_gpu_correctness.rs  flash_quantized_sdpa_mask_gpu_correctness.rs  fp_quantized_fp4_gpu_correctness.rs  fp_quantized_fp8_gpu_correctness.rs  fp_quantized_gpu_correctness.rs  fp_quantized_mma_gpu_correctness.rs  fp_quantized_nax_gpu_correctness.rs  fused_gate_activation_gpu_correctness.rs  gated_delta_gpu_correctness.rs  gated_delta_prep_chunk_correctness.rs  gated_delta_prep_step_correctness.rs  (+124 more)
crates/metaltile-std/tests/common/: mod.rs
crates/metaltile-std/tests/snapshots/: aura_msl_snapshots__aura_encode_int4_f32_msl.snap  aura_msl_snapshots__aura_flash_p1_kb4_vb2_d128_f32_msl.snap  aura_msl_snapshots__aura_flash_pass2_d128_bf16_msl.snap  aura_msl_snapshots__aura_score_int4_f32_msl.snap  steel_msl_snapshots__fp_quantized_nax_f16_msl.snap  steel_msl_snapshots__hadamard_m_m20_f32_msl.snap  steel_msl_snapshots__quantized_nax_f16_msl.snap  steel_msl_snapshots__steel_gemm_fused_nax_f16_msl.snap  steel_msl_snapshots__steel_gemm_gather_nax_f16_msl.snap  steel_msl_snapshots__steel_gemm_splitk_nax_f16_msl.snap
crates/metaltile/src/: lib.rs  prelude.rs  runner.rs  test.rs
crates/metaltile/src/bench/: helpers.rs  mod.rs  run.rs
crates/metaltile/src/harness/: filters.rs  mod.rs  protocol.rs  row.rs  runner.rs
crates/metaltile/src/probe/: mma_layout_probe.rs
crates/metaltile/tests/: compile_fail.rs
crates/metaltile/tests/error/: inclusive_range_in_loop.rs  inclusive_range_in_loop.stderr  open_ended_range_in_loop.rs  open_ended_range_in_loop.stderr  (+4 more)
(+200 files in other folders)
