[package]
name = "metaltile-autotune"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MetalTile autotune engine — search, measurement, and cost modeling for kernel scheduling"
publish = false

[dependencies]
thiserror.workspace = true
metaltile.workspace = true
metaltile-core.workspace = true
metaltile-codegen.workspace = true
metaltile-runtime.workspace = true
metaltile-std.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
