[package]
name = "metaltile-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MetalTile CLI — benchmark, test, and inspect GPU kernels"
keywords = ["metal", "gpu", "apple-silicon", "benchmark", "cli"]
categories = ["hardware-support", "development-tools"]
publish = false

[[bin]]
name = "tile"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
metaltile.workspace = true
metaltile-core.workspace = true
metaltile-codegen.workspace = true
metaltile-std.workspace = true
metaltile-model.workspace = true
metaltile-infer.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
clap.workspace = true
anstyle = "1"
anstream = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true