[package]
name = "metaltile-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc-macro crate providing the #[kernel] DSL for MetalTile GPU kernels"
keywords = ["metal", "gpu", "apple-silicon", "macro", "dsl"]
categories = ["compilers", "hardware-support"]
publish = false

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
