[package]
name = "metaltile-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MetalTile kernel standard library"
publish = true

[dependencies]
metaltile.workspace = true
rustc-hash.workspace = true
metaltile-core.workspace = true
metaltile-codegen.workspace = true
metaltile-runtime.workspace = true
inventory.workspace = true
half.workspace = true
bytemuck.workspace = true

[dev-dependencies]
insta.workspace = true
