[package]
name = "metaltile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Rust DSL for writing Apple Metal GPU kernels — write once, run fast on Apple Silicon"
keywords = ["metal", "gpu", "apple-silicon", "dsl", "shader"]
categories = ["compilers", "hardware-support"]

[dependencies]
metaltile-core.workspace = true
metaltile-macros.workspace = true
metaltile-codegen.workspace = true
metaltile-runtime.workspace = true
metaltile-std.workspace = true
inventory = "0.3"
half.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
trybuild.workspace = true
